--- a/server/src/main/resources/public/css/style.css
+++ b/server/src/main/resources/public/css/style.css
@@ -17,16 +17,14 @@ body {
   display: grid;
   place-items: center;
 }
-.container {
-  display: grid;
-  place-items: center;
-}
 
 .home-container {
     color: #24233c;
     width: 100vw;
     height: 100vh;
+    padding: 2rem 3rem;
     display: grid;
+    grid-template-columns: 1fr 1fr;
     place-content: center;
 }
 
@@ -62,26 +60,31 @@ body {
     color: #cb6571;
 }
 
+.home-container .text {
+    height: 500px;
+    display: grid;
+    place-content: center;
+}
+
 .form-container {
     display: grid;
     place-content: center;
     padding: 2rem;
 }
 
-
-/* Register */
-
-/* #form {
-    background-color: antiquewhite;
-    width: 700px;
-    min-height: 60vh;
-} */
 .form-container {
-    max-width: 800px;
     margin: 0 auto;
-    background-color: #fff;
     padding: 20px;
-    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+}
+
+.form-container #form {
+    background-color: #24233c;
+    color: antiquewhite;
+    width: 450px;
+    padding: 2rem 2.5rem;
+    border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -92,36 +95,45 @@ body {
 .form-label {
     display: block;
     margin-bottom: 5px;
-    color: #333;
 }
 
-.form-control input {
+.form-input {
+    font-size: 1rem;
+    padding: 4px 8px;
+    outline: none;
+    border: none;
+    background-color: #24233c;
+    border: 1px solid antiquewhite;
+    color: antiquewhite;
     width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
     border-radius: 3px;
-    font-size: 16px;
+}
+
+.form-control input[type="text"] {
+    background-color: #24233c;
+}
+
+.form-btns {
+    display: flex;
+    place-content: center;
 }
 
 .btn {
     background-color: #007bff;
-    color: #fff;
+    background-color: #cb6571;
+    color: antiquewhite;
     padding: 10px 20px;
     border: none;
     border-radius: 3px;
     cursor: pointer;
     font-size: 16px;
+    margin: 0 4px;
 }
 
-/* Style form message */
 .form-message {
     text-align: center;
-    margin-top: 10px;
-    color: #007bff;
-}
-
-/* Style form validation errors if needed */
-.error-message {
-    color: red;
+    margin: 10px 0;
+    color: #cb6571;
     font-size: 14px;
+    text-align: center;
 }
