--- a/client/devzone/src/index.css
+++ b/client/devzone/src/index.css
@@ -1,3 +1,16 @@
+@import url('http://fonts.cdnfonts.com/css/calculator');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body,html{
+  background-color: #24233c;
+  background-image: linear-gradient(43deg, #24233c 0%, #936d80 33%, #cb6571 100%);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +24,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
