--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,4 +1,4 @@
-nav {
+/* nav {
     width: 100vw;
     height: 7vh;
     border-bottom: 1px solid rgba(250, 235, 215, 0.356);
@@ -39,4 +39,4 @@ nav .logout-btn {
 nav .logout-btn:hover {
     background-color: antiquewhite;
     color:#24233c;
-}
+} */
