--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -3,8 +3,9 @@ nav {
     height: 7vh;
     border-bottom: 1px solid rgba(250, 235, 215, 0.356);
     display: grid;
-    grid-template-columns: 35% 45% 15%;
+    grid-template-columns: 70% 30%;
     place-content: center;
+    padding-left: 2rem;
 }
 
 nav .search-bar {
