--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -106,7 +106,7 @@ nav .logout-btn:hover {
     color: rgba(243, 219, 189, 0.863);
 }
 
-/* .main {
+.main {
     padding: 0.75rem 0;
     position: relative;
     display: flex;
@@ -114,7 +114,16 @@ nav .logout-btn:hover {
     align-items: center;
 }
 
-.main .info {
+.main .messages, 
+.main .container {
+    overflow-y: auto;
+    width: 96%;
+    height: 70vh;
+    padding: 8px 1.5rem;
+    padding-bottom: 10px;
+}
+
+/* .main .info {
     text-align: center;
     margin-bottom: 0.75rem;
 }
