--- a/client/src/components/messages-container/messagesContainer.css
+++ b/client/src/components/messages-container/messagesContainer.css
@@ -96,9 +96,10 @@
     border-radius: 10px;
 }
 
-.home-container .input-box {
+.home-container .input-box, 
+.react-input-emoji--wrapper {
     width: 100%;
-    height: 100%;
+    height: 60px;
     border-radius: 10px;
     background-color: transparent;
     box-shadow: 10px 10px 50px rgba(0,0,0,0.2);
@@ -113,18 +114,18 @@
     background-image: linear-gradient(43deg, #24233c 0%, #936d80 33%, #cb6571 100%);
 }
 
-.send-btn {
-    width: 30px;
-    height: 30px;
-    font-size: 1.5rem;
-    text-align: center;
+.react-input-emoji--input::-webkit-scrollbar-thumb, 
+.react-input-emoji--input::-webkit-scrollbar {
+    display: hidden;
+    width: 0px !important;
+}
+
+.react-input-emoji--button--icon {
+    background-color: #ffde34 !important;
+    padding: 7px;
+    fill: #24233c !important;
+    height: 37px;
+    width: 37px;
     border-radius: 50%;
-    border: none;
-    outline: none;
-    position: absolute;
-    top: 35%;
-    right: 10px;
-    background-color: #24233c;
-    color: antiquewhite;
-    cursor: pointer;
+    border: antiquewhite 1px solid;
 }
